<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_Message" Id="{1d190b77-cb88-4f2d-8c5f-8826899ae411}">
    <Declaration><![CDATA[TYPE ST_Message :
STRUCT
  eType         : e_MessageType;
  eDevice       : e_Device;
  eSubdevice    : e_SubDevice;
  {attribute 'displaymode':='hex'}
  iErrorNumber  : LINT;
  tTime         : STRING(24);
  sText         : STRING(256);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>