<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_NciChannel_Ref" Id="{45452d2b-5996-0ee1-1adc-7cf3d4675fa6}">
    <Declaration><![CDATA[TYPE ST_NciChannel_Ref :
STRUCT
  NcToPlc AT %I*: NcToPlc_NciChannel_Ref;   //  Externer Datentyp!
  PlcToNc AT %Q*: PlcToNc_NciChannel_Ref;   //  Externer Datentyp!
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>